--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -50,7 +50,7 @@
         android:id="@+id/one"
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="160dp"
         android:background="@drawable/topicbutton"
         android:text="hello my name is"
         android:textSize="16sp"
@@ -94,9 +94,13 @@
 
     <TextView
         android:id="@+id/questioned"
-        android:layout_width="wrap_content"
+        android:layout_width="335dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:autoSizeMaxTextSize="100sp"
+        android:autoSizeMinTextSize="12sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -110,7 +114,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Score:"
+        android:text="Score: 0"
         android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/questioned"
@@ -180,11 +184,43 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="18dp"
         android:text="what are you looking at"
+        android:textAlignment="textStart"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/heartOne" />
+
+    <ImageView
+        android:id="@+id/heartOne"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="224dp"
+        android:tag="3"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toStartOf="@+id/textView3" />
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:srcCompat="@drawable/hp" />
+
+    <ImageView
+        android:id="@+id/heartTwo"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:tag="2"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/heartOne"
+        app:layout_constraintTop_toTopOf="@+id/heartOne"
+        app:srcCompat="@drawable/hp" />
+
+    <ImageView
+        android:id="@+id/heartThree"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:tag="1"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/heartTwo"
+        app:layout_constraintTop_toTopOf="@+id/heartTwo"
+        app:srcCompat="@drawable/hp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
