--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:layout_marginEnd="184dp"
+        android:layout_marginEnd="172dp"
         android:text="Enter Name:"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -59,9 +59,7 @@
         android:text="Bibi's Adventure"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/button4" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/continued"
@@ -71,50 +69,75 @@
         android:background="@drawable/rounded_rectangle"
         android:text="Continue"
         app:layout_constraintEnd_toEndOf="@+id/download"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/Basic" />
 
     <ImageButton
-        android:id="@+id/button4"
-        android:layout_width="150dp"
+        android:id="@+id/Ten_Questions"
+        android:layout_width="180dp"
         android:layout_height="55dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/topicbutton"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
-
-    <ImageButton
-        android:id="@+id/button2"
-        android:layout_width="150dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="56dp"
-        android:background="@drawable/topicbutton"
+        android:layout_marginTop="72dp"
+        android:background="@drawable/topicbuttonclicked"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
     <ImageButton
-        android:id="@+id/button3"
-        android:layout_width="150dp"
+        android:id="@+id/Basic"
+        android:layout_width="180dp"
         android:layout_height="55dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/topicbutton"
         android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintEnd_toEndOf="@+id/Lives"
+        app:layout_constraintStart_toStartOf="@+id/Lives"
+        app:layout_constraintTop_toBottomOf="@+id/Lives" />
 
     <ImageButton
-        android:id="@+id/button"
-        android:layout_width="150dp"
+        android:id="@+id/Lives"
+        android:layout_width="180dp"
         android:layout_height="55dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/topicbutton"
         android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintEnd_toEndOf="@+id/Ten_Questions"
+        app:layout_constraintStart_toStartOf="@+id/Ten_Questions"
+        app:layout_constraintTop_toBottomOf="@+id/Ten_Questions" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lives Mode"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/Lives"
+        app:layout_constraintEnd_toEndOf="@+id/Lives"
+        app:layout_constraintStart_toStartOf="@+id/Lives"
+        app:layout_constraintTop_toTopOf="@+id/Lives" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Basic Mode"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/Basic"
+        app:layout_constraintEnd_toEndOf="@+id/Basic"
+        app:layout_constraintStart_toStartOf="@+id/Basic"
+        app:layout_constraintTop_toTopOf="@+id/Basic" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ten Questions Mode"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/Ten_Questions"
+        app:layout_constraintEnd_toEndOf="@+id/Ten_Questions"
+        app:layout_constraintStart_toStartOf="@+id/Ten_Questions"
+        app:layout_constraintTop_toTopOf="@+id/Ten_Questions" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
