--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<!--
-<item
-    android:id="@+id/item_login"
-    android:title="Login"
-    android:orderInCategory="3"
-    android:icon="@drawable/login"
-    app:showAsAction="ifRoom"/>
--->
+
 <item
     android:id="@+id/item_music"
-    android:orderInCategory="2"
+    android:orderInCategory="3"
     android:title="Disable Music"
-    android:icon="@drawable/sound_off"
-    app:showAsAction="ifRoom"/>
+    android:icon="@drawable/sound_on"
+    app:showAsAction="always"/>
+
+<item
+    android:id="@+id/trophy"
+    android:orderInCategory="2"
+    android:title="stats"
+    android:icon="@drawable/trophy"
+    app:showAsAction="always"/>
 
 <item
     android:id="@+id/item_exit"
     android:orderInCategory="1"
     android:title="Exit"
     android:icon="@drawable/exit_door"
-    app:showAsAction="ifRoom" />
+    app:showAsAction="always" />
 
 <item
     android:id="@+id/item_home"
-    android:orderInCategory="3"
+    android:orderInCategory="4"
     android:title="Home"
     android:icon="@drawable/homebutton"
-    app:showAsAction="ifRoom" />
+    app:showAsAction="always" />
 
 
 </menu>
